# arcade_demo

./: .gitignore  worker.toml
weather/: CONTRIBUTING.md  LICENCE  Makefile  README.md  pyproject.toml
weather/demo/: README.md  bug_reproduction.py  langchain_agent.py  weather_agent.py
weather/evals/: eval_weather.py
weather/tests/: test_weather.py
weather/weather/: __init__.py
weather/weather/tools/: __init__.py  hello.py  weather.py
